# rust_robotics

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  plan.md
crates/rust_robotics/: Cargo.toml  README.md
crates/rust_robotics/examples/: a_star.rs  any_angle_comparison.rs  benchmark_adap_rpf_metrics.rs  benchmark_admm_formation.rs  benchmark_admm_graph_consensus.rs  benchmark_admm_horizon_consensus.rs  benchmark_branchout_closed_loop.rs  benchmark_cbf_safety_filter.rs  benchmark_conformal_sipp.rs  benchmark_grid_planners.rs  benchmark_hierarchical_mapf_scale.rs  benchmark_hierarchical_mapf_sweeps.rs  benchmark_localizers.rs  benchmark_pusher_slider.rs  benchmark_pusher_slider_multi.rs  benchmark_pusher_slider_two_contact.rs  benchmark_racing_motor.rs  benchmark_racing_mppi_3d.rs  benchmark_racing_powertrain.rs  benchmark_racing_powertrain_aware.rs  benchmark_racing_powertrain_budget.rs  benchmark_racing_powertrain_endurance.rs  benchmark_racing_powertrain_recovery.rs  benchmark_racing_quadrotor.rs  benchmark_rigid_body_backends.rs  benchmark_sampling_planners.rs  benchmark_traversal_risk_sweep.rs  bidirectional_rrt_viz.rs  dora_ekf_node.rs  dora_path_metrics_node.rs  dora_path_planning_dataflow.yml  dora_path_planning_node.rs  dora_path_planning_sink.rs  filter_comparison.rs  headless_adap_rpf_mppi.rs  headless_adaptive_costmap_namo.rs  headless_branchout_multimodal_driving.rs  headless_clearance_risk_graph.rs  headless_conformal_sipp.rs  headless_elevation_risk_graph.rs  (+43 more)
crates/rust_robotics/src/: lib.rs
crates/rust_robotics_control/: Cargo.toml  README.md
crates/rust_robotics_control/examples/: update_path_tracking_accuracy_docs.rs
crates/rust_robotics_control/src/: admm_consensus.rs  arm_obstacle_navigation.rs  backstepping_control.rs  cbf_safety_filter.rs  cgmres_nmpc.rs  ddp.rs  drone_3d_trajectory.rs  feedback_linearization.rs  ilqr.rs  lib.rs  lqr_control.rs  lqr_speed_steer_control.rs  lqr_steer_control.rs  minimum_snap_trajectory.rs  model_predictive_trajectory_generator.rs  move_to_pose.rs  mpc.rs  mpc_control.rs  mppi.rs  n_joint_arm_3d.rs  n_joint_arm_control.rs  person_following_mppi.rs  pid_controller.rs  pure_pursuit.rs  pusher_slider.rs  racing_mppi_3d.rs  racing_mppi_motor.rs  racing_mppi_powertrain.rs  racing_mppi_quadrotor.rs  rear_wheel_feedback.rs  rocket_landing.rs  rrt_star_seven_joint_arm.rs  sliding_mode_control.rs  stanley_controller.rs  state_machine.rs  two_joint_arm_control.rs
crates/rust_robotics_control/tests/: drone_trajectory_variant_comparison.rs
crates/rust_robotics_core/: Cargo.toml  README.md
crates/rust_robotics_core/examples/: update_workspace_experiment_summary.rs
crates/rust_robotics_core/src/: error.rs  experiments.rs  lib.rs  traits.rs  types.rs
crates/rust_robotics_core/tests/: workspace_summary_guard.rs
crates/rust_robotics_localization/: Cargo.toml  README.md
crates/rust_robotics_localization/examples/: update_ukf_ckf_accuracy_docs.rs
crates/rust_robotics_localization/src/: adaptive_filter.rs  complementary_filter.rs  cubature_kalman_filter.rs  ekf.rs  ensemble_kalman_filter.rs  histogram_filter.rs  information_filter.rs  iterated_ekf.rs  lib.rs  monte_carlo_localization.rs  particle_filter.rs  square_root_ukf.rs  unscented_kalman_filter.rs
crates/rust_robotics_localization/tests/: ckf_vs_ukf_broad_comparison.rs  proptest_filters.rs  unified_filter_comparison.rs
crates/rust_robotics_mapping/: Cargo.toml  README.md
crates/rust_robotics_mapping/examples/: update_point_cloud_sampling_docs.rs
crates/rust_robotics_mapping/src/: circle_fitting.rs  dbscan_clustering.rs  distance_map.rs  gaussian_grid_map.rs  gaussian_process.rs  kmeans_clustering.rs  lib.rs  lidar_to_grid_map.rs  line_extraction.rs  ndt.rs  normal_vector_estimation.rs  occupancy_grid_map.rs  point_cloud_sampling.rs  ray_casting_grid_map.rs  rectangle_fitting.rs
crates/rust_robotics_planning/: Cargo.toml  README.md
crates/rust_robotics_planning/benches/: grid_planners.rs  jps_crossover_benchmark.rs  unified_planning_benchmark.rs
crates/rust_robotics_planning/examples/: sweep_variance_triggered_runtime.rs  update_moving_ai_runtime_docs.rs
crates/rust_robotics_planning/src/: a_star.rs  a_star_variants.rs  adaptive_costmap_namo.rs  anya.rs  ara_star.rs  batch_informed_rrt_star.rs  bezier_path.rs  bezier_path_planning.rs  bidirectional_a_star.rs  bidirectional_bfs.rs  bidirectional_rrt.rs  bipedal_planner.rs  bit_star.rs  branchout_multimodal.rs  breadth_first_search.rs  bspline_path.rs  bug_planning.rs  catmull_rom_spline.rs  chomp.rs  closed_loop_rrt_star.rs  clothoid_path.rs  conformal_sipp.rs  coverage_planning.rs  cubic_spline_planner.rs  d_star.rs  d_star_lite.rs  depth_first_search.rs  dijkstra.rs  dubins_path.rs  dwa.rs  dynamic_movement_primitives.rs  elastic_bands.rs  enhanced_lazy_theta_star.rs  eta3_spline.rs  flow_field.rs  fmt_star.rs  frenet_optimal_trajectory.rs  fringe_search.rs  frontier_navigator.rs  greedy_best_first_search.rs  (+45 more)
crates/rust_robotics_planning/tests/: any_angle_full_comparison.rs  any_angle_movingai_comparison.rs  any_angle_optimality_gap.rs  any_angle_statistical_test.rs  coverage_planner_comparison.rs  flowfield_multiagent_comparison.rs  grid_threshold_planner_comparison.rs  lqr_rrt_star.rs  model_predictive_trajectory_generator.rs  rrt_star_convergence_comparison.rs  spiral_spanning_tree_cpp.rs  unified_planning_benchmark_maze.rs
crates/rust_robotics_playground/: Cargo.toml  README.md  Trunk.toml  index.html
crates/rust_robotics_playground/src/: admm_formation.rs  app.rs  grid_planners.rs  localization.rs  main.rs  slam.rs
crates/rust_robotics_slam/: Cargo.toml  README.md
crates/rust_robotics_slam/src/: correlative_scan_matching.rs  ekf_slam.rs  fastslam1.rs  fastslam2.rs  graph_based_slam.rs  icp_matching.rs  (+3 more)
crates/rust_robotics_viz/: Cargo.toml  README.md
ros2_nodes/dwa_planner_node/: Cargo.toml
ros2_nodes/ekf_localizer_node/: Cargo.toml
ros2_nodes/slam_node/: Cargo.toml
ros2_nodes/waypoint_navigator_node/: Cargo.toml
(+322 files in other folders)
