[workspace]
members = [
    "crates/rust_robotics_core",
    "crates/rust_robotics_planning",
    "crates/rust_robotics_localization",
    "crates/rust_robotics_control",
    "crates/rust_robotics_mapping",
    "crates/rust_robotics_slam",
    "crates/rust_robotics_viz",
    "crates/rust_robotics",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rsasaki0109/rust_robotics"
authors = ["ryohei sasaki <rsasaki0109@gmail.com>"]

[workspace.dependencies]
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
itertools = "0.13"
ordered-float = "4.2"
gnuplot = "0.0.43"
plotlib = "0.5"

# Internal crate dependencies
rust_robotics_core = { path = "crates/rust_robotics_core" }
rust_robotics_planning = { path = "crates/rust_robotics_planning" }
rust_robotics_localization = { path = "crates/rust_robotics_localization" }
rust_robotics_control = { path = "crates/rust_robotics_control" }
rust_robotics_mapping = { path = "crates/rust_robotics_mapping" }
rust_robotics_slam = { path = "crates/rust_robotics_slam" }
rust_robotics_viz = { path = "crates/rust_robotics_viz" }
