[workspace]
members = [
    "crates/rust_robotics_core",
    "crates/rust_robotics_planning",
    "crates/rust_robotics_localization",
    "crates/rust_robotics_control",
    "crates/rust_robotics_mapping",
    "crates/rust_robotics_slam",
    "crates/rust_robotics_viz",
    "crates/rust_robotics",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/rsasaki0109/rust_robotics"
authors = ["ryohei sasaki <rsasaki0109@gmail.com>"]
keywords = ["robotics", "path-planning", "localization", "slam", "control"]
categories = ["algorithms", "science::robotics", "simulation"]

[workspace.dependencies]
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
itertools = "0.13"
ordered-float = "4.2"
gnuplot = "0.0.43"

# Internal crate dependencies
rust_robotics_core = { path = "crates/rust_robotics_core", version = "0.1.0" }
rust_robotics_planning = { path = "crates/rust_robotics_planning", version = "0.1.0" }
rust_robotics_localization = { path = "crates/rust_robotics_localization", version = "0.1.0" }
rust_robotics_control = { path = "crates/rust_robotics_control", version = "0.1.0" }
rust_robotics_mapping = { path = "crates/rust_robotics_mapping", version = "0.1.0" }
rust_robotics_slam = { path = "crates/rust_robotics_slam", version = "0.1.0" }
rust_robotics_viz = { path = "crates/rust_robotics_viz", version = "0.1.0" }
