[package]
name = "rust_robotics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Umbrella crate for the RustRobotics workspace — feature-gated re-exports of all domain crates"

[features]
default = ["planning", "localization", "control", "mapping", "slam"]
planning = ["dep:rust_robotics_planning"]
localization = ["dep:rust_robotics_localization"]
control = ["dep:rust_robotics_control"]
mapping = ["dep:rust_robotics_mapping"]
slam = ["dep:rust_robotics_slam"]
viz = ["dep:rust_robotics_viz", "rust_robotics_control?/viz", "rust_robotics_slam?/viz"]
dora = ["dep:dora-node-api", "dep:eyre", "dep:serde", "dep:serde_json"]
full = ["planning", "localization", "control", "mapping", "slam", "viz"]

[dependencies]
rust_robotics_core = { workspace = true }
rust_robotics_planning = { workspace = true, optional = true }
rust_robotics_localization = { workspace = true, optional = true }
rust_robotics_control = { workspace = true, optional = true }
rust_robotics_mapping = { workspace = true, optional = true }
rust_robotics_slam = { workspace = true, optional = true }
rust_robotics_viz = { workspace = true, optional = true }
dora-node-api = { version = "0.3.0", optional = true }
eyre = { version = "0.6.7", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
gnuplot = { workspace = true }
nalgebra = { workspace = true }

# === Headless examples (require domain features but not viz) ===

[[example]]
name = "headless_grid_planners"
path = "examples/headless_grid_planners.rs"
required-features = ["planning"]

[[example]]
name = "headless_localizers"
path = "examples/headless_localizers.rs"
required-features = ["localization"]

[[example]]
name = "headless_navigation_loop"
path = "examples/headless_navigation_loop.rs"
required-features = ["planning", "localization", "control"]

[[example]]
name = "dora_path_planning_node"
path = "examples/dora_path_planning_node.rs"
required-features = ["planning", "dora"]

[[example]]
name = "dora_path_planning_sink"
path = "examples/dora_path_planning_sink.rs"
required-features = ["dora"]

[[example]]
name = "dora_path_metrics_node"
path = "examples/dora_path_metrics_node.rs"
required-features = ["dora"]

# === Visualization examples (require viz + domain features) ===

[[example]]
name = "a_star"
path = "examples/a_star.rs"
required-features = ["planning", "viz"]

[[example]]
name = "jps"
path = "examples/jps.rs"
required-features = ["planning", "viz"]

[[example]]
name = "theta_star"
path = "examples/theta_star.rs"
required-features = ["planning", "viz"]

[[example]]
name = "state_lattice"
path = "examples/state_lattice.rs"
required-features = ["planning", "viz"]

[[example]]
name = "rear_wheel_feedback"
path = "examples/rear_wheel_feedback.rs"
required-features = ["control", "viz"]

[[example]]
name = "speed_comparison"
path = "examples/speed_comparison.rs"
required-features = ["planning", "localization"]
