[package]
name = "rust_robotics_control"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Control and path tracking algorithms for the RustRobotics workspace"

[features]
default = []
viz = ["dep:gnuplot"]

[dependencies]
rust_robotics_core = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
gnuplot = { workspace = true, optional = true }
clarabel = "0.11"
