[package]
name = "rust_robotics_control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://rsasaki0109.github.io/rust_robotics/api/rust_robotics_control/"
description = "Control and path tracking algorithms for the RustRobotics workspace"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
viz = ["dep:gnuplot"]

[dependencies]
rust_robotics_core = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
gnuplot = { workspace = true, optional = true }
clarabel = "0.11"
