[package]
name = "rust_robotics_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://rsasaki0109.github.io/rust_robotics/api/rust_robotics_core/"
description = "Core types, traits, and error types for the RustRobotics workspace"

[package.metadata.docs.rs]
all-features = true

[dependencies]
nalgebra = { workspace = true }
