[package]
name = "rust_robotics_localization"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Localization algorithms (EKF, UKF, Particle Filter, etc.) for the RustRobotics workspace"

[dependencies]
rust_robotics_core = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
proptest = "1.4"
