[package]
name = "rust_robotics_localization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://rsasaki0109.github.io/rust_robotics/api/rust_robotics_localization/"
description = "Localization algorithms (EKF, UKF, Particle Filter, etc.) for the RustRobotics workspace"

[package.metadata.docs.rs]
all-features = true

[dependencies]
rust_robotics_core = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
proptest = "1.4"
