[package]
name = "rust_robotics_localization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://rsasaki0109.github.io/rust_robotics/api/rust_robotics_localization/"
description = "Localization algorithms (EKF, UKF, Particle Filter, etc.) for the RustRobotics workspace"

[package.metadata.docs.rs]
all-features = true

[dependencies]
rust_robotics_core = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true, optional = true }
rand_distr = { workspace = true, optional = true }

[features]
default = ["std"]
# Without `std`, the sampling-based localizers (particle filter, MCL,
# ensemble KF) and the experiment harness are disabled; the Kalman-family
# filters build for bare-metal targets.
std = [
    "rust_robotics_core/std",
    "nalgebra/std",
    "num-traits/std",
    "dep:rand",
    "dep:rand_distr",
]

[dev-dependencies]
proptest = "1.4"
