[package]
name = "rust_robotics_mapping"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Mapping algorithms (NDT, occupancy grid, etc.) for the RustRobotics workspace"

[dependencies]
rust_robotics_core = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
