[package]
name = "rust_robotics_planning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Path planning algorithms (A*, DWA, RRT, PRM, etc.) for the RustRobotics workspace"

[dependencies]
rust_robotics_core = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
itertools = { workspace = true }
ordered-float = { workspace = true }
