[package]
name = "rust_robotics_planning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Path planning algorithms (A*, DWA, RRT, PRM, etc.) for the RustRobotics workspace"

[dependencies]
rust_robotics_core = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
itertools = { workspace = true }
ordered-float = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "grid_planners"
harness = false

[[bench]]
name = "unified_planning_benchmark"
harness = false

[[bench]]
name = "jps_crossover_benchmark"
harness = false
