[package]
name = "rust_robotics_playground"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Interactive egui playground for RustRobotics algorithms (not published to crates.io)"
publish = false

[dependencies]
egui = "0.31"
rust_robotics_planning = { workspace = true }
rust_robotics_core = { workspace = true }
nalgebra = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }
wasm-bindgen = "0.2"

[features]
default = []

[[bin]]
name = "rust_robotics_playground"
path = "src/main.rs"
